[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/DynamicFonts/SlideshowTitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/SlideShows/SlideShow.gd" type="Script" id=2]
[ext_resource path="res://Assets/Slide Show Elements/Next Slide Element Arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Slide Show Elements/Titlebar Fade.png" type="Texture" id=4]
[ext_resource path="res://Assets/Slide Show Elements/Slideshow BG Texture.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SlideShows/Slides/Category 1/C1S1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Slide Show Elements/Next Slide Arrow.png" type="Texture" id=7]

[node name="SlideShow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
slides = [ ExtResource( 6 ), ExtResource( 6 ) ]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBarBGColor" type="ColorRect" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )
color = Color( 0.141176, 0.47451, 0.94902, 1 )

[node name="Title" type="Label" parent="VBoxContainer/TitleBarBGColor"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -64.0
margin_right = 768.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "title goes here"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBarFade" type="TextureRect" parent="VBoxContainer/TitleBarBGColor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -896.0
margin_bottom = 192.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentsBGColor" type="ColorRect" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
color = Color( 0.168627, 0.309804, 0.529412, 1 )

[node name="Texture" type="TextureRect" parent="VBoxContainer/ContentsBGColor"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_top = -962.0
margin_bottom = -2.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextArrow" type="TextureRect" parent="VBoxContainer/ContentsBGColor"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -88.0
margin_right = -32.0
margin_bottom = -24.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextSlideArrow" type="TextureRect" parent="VBoxContainer/ContentsBGColor"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -88.0
margin_right = -32.0
margin_bottom = -18.0
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideMargin" type="MarginContainer" parent="VBoxContainer/ContentsBGColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 64
custom_constants/margin_left = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroFade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ArrowTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="SlideArrowTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
